tracker#492: Fix a bug with "Remember this search" and encoding

--- a/locale/fr.po
+++ b/locale/fr.po
@@ -1703,7 +1703,7 @@ msgstr "Modifier les plages horaires"
 
 #: ../tracker/tracker_views.py:158
 msgid "Edit this search"
-msgstr "Modifier cette recherche"
+msgstr "Editer cette recherche"
 
 #: ../user_views.py:151
 msgid "Edit your name and email address."
