Finish release notes for 0.50.1

--- a/RELEASE-0.50.1
+++ b/RELEASE-0.50.1
@@ -1,5 +1,5 @@
 
-ikaaro 0.50.1 (2009/01/05)
+ikaaro 0.50.1 (2009/01/06)
 ==========================
 
 This is a Content Management System built on Python & itools, among
@@ -10,7 +10,8 @@ other features ikaaro provides:
  - high level modules: wiki, forum, tracker, etc.
 
 This is a bug fix release, including some regressions.  Among the bugs
-fixed there are: #474, #487, #491, #495 and #497.
+fixed there are: #324, #474, #476, #487, #491, #495, #497, #506 and
+#509.
 
 
 Resources
