Schedule 0.50.3 for this month.

--- a/RELEASE-0.50.3
+++ b/RELEASE-0.50.3
@@ -1,5 +1,5 @@
 
-ikaaro 0.50.3 (2009/0X/XX)
+ikaaro 0.50.3 (2009/03/XX)
 ==========================
 
 This is a Content Management System built on Python & itools, among
