Remove a ":" in fr.po file

--- a/locale/fr.po
+++ b/locale/fr.po
@@ -1822,7 +1822,7 @@ msgstr "Exporter en CSV"
 
 #: ../tracker/tracker_views.py:167
 msgid "Export to Text"
-msgstr "Exporter en texte&nbsp;:"
+msgstr "Exporter en texte"
 
 #: ../tracker/ui/export_to_text.xml.en:14
 msgctxt "legend"
