Finish release notes for 0.50.5

--- a/RELEASE-0.50.5
+++ b/RELEASE-0.50.5
@@ -1,5 +1,5 @@
 
-ikaaro 0.50.5 (2009/04/XX)
+ikaaro 0.50.5 (2009/04/17)
 ==========================
 
 This is a Content Management System built on Python & itools, among
@@ -13,8 +13,8 @@ other features ikaaro provides:
 Changes
 -------
 
-This is a bug fix release. Bugs fixed include #499, #570, #596, #617 and
-#620.
+This is a bug fix release. Bugs fixed include #499, #570, #596, #599,
+#617, #618 and #620.
 
 
 Resources
