--- a/RELEASE-0.60.2
+++ b/RELEASE-0.60.2
@@ -13,7 +13,7 @@ There have been various optimizations, most notably of the folder's
 browse content view, which now retrieves the last modification time
 and last author from the catalog instead of asking Git.
 
-The 'icms-updata-catalog.py' script has been optimized too, specially
+The 'icms-update-catalog.py' script has been optimized too, specially
 by parallelizing the calls to Git.  Also, this script accepts a new
 '--quiet' option.
 
