Ready to release 0.60.6

--- a/RELEASE-0.60.6
+++ b/RELEASE-0.60.6
@@ -1,5 +1,5 @@
 
-ikaaro 0.60.6 (2009/12/XX)
+ikaaro 0.60.6 (2009/12/16)
 ==========================
 
 This is a Content Management System built on Python & itools, among
