to_odt#781 export a compilation of pages as ODT

--- a/locale/fr.po
+++ b/locale/fr.po
@@ -4379,6 +4379,10 @@ msgctxt "table cell"
 msgid "⇒ ${item/parent_path}"
 msgstr "⇒ ${item/parent_path}"
 
+#: ../wiki/page_views.py:482
+msgid "Table of Contents"
+msgstr "Table des matières"
+
 #~ msgid "$label (External)"
 #~ msgstr "$label (externe)"
 
