Get ready to release 0.61.1

--- a/RELEASE-0.61.1
+++ b/RELEASE-0.61.1
@@ -1,5 +1,5 @@
 
-ikaaro 0.61.1 (2010/03/XX)
+ikaaro 0.61.1 (2010/03/16)
 ==========================
 
 This is a Content Management System built on Python & itools, among
@@ -9,7 +9,8 @@ other features ikaaro provides:
  - multilingual user interfaces and content
  - high level modules: wiki, forum, tracker, etc.
 
-This is a bug fix release.  Bugs fixed include #547, #821 and #828.
+This is a bug fix release.  Bugs fixed include #547, #730, #821 and
+#828.
 
 
 Resources
