Update release notes for 0.61.3

--- a/RELEASE-0.61.3
+++ b/RELEASE-0.61.3
@@ -1,5 +1,5 @@
 
-ikaaro 0.61.3 (2010/05/XX)
+ikaaro 0.61.3 (2010/06/XX)
 ==========================
 
 This is a Content Management System built on Python & itools, among
@@ -9,6 +9,11 @@ other features ikaaro provides:
  - multilingual user interfaces and content
  - high level modules: wiki, forum, tracker, etc.
 
+With this release the old external editor, zopeedit.py [1], has been
+replaced by restedit.py [2].  The new method is restful, it replaces
+the locking mechanism by an optimistic approach based in timestamps,
+which integrates better with the rest of ikaaro.
+
 Now the configuration file requires the listen-address and listen-port
 variables to be set.  It is possible again to listen to any interface,
 to do so the listen-address variable must be set to the "*" value.
@@ -16,6 +21,11 @@ to do so the listen-address variable must be set to the "*" value.
 The locale files have been updated and slimmed.
 
 The code has been optimized a little, now ui handlers are cached.
+
+Several bugs have been fixed, including #869
+
+[1] http://plone.org/products/zope-externaleditor-client
+[2] http://www.hforge.org/restedit
 
 
 Resources
