Get ready to release 0.61.3

--- a/RELEASE-0.61.3
+++ b/RELEASE-0.61.3
@@ -1,5 +1,5 @@
 
-ikaaro 0.61.3 (2010/06/XX)
+ikaaro 0.61.3 (2010/06/10)
 ==========================
 
 This is a Content Management System built on Python & itools, among
@@ -22,7 +22,7 @@ The locale files have been updated and slimmed.
 
 The code has been optimized a little, now ui handlers are cached.
 
-Several bugs have been fixed, including #869
+Several bugs have been fixed, including #816, #869 and #892
 
 [1] http://plone.org/products/zope-externaleditor-client
 [2] http://www.hforge.org/restedit
