Get ready to release 0.61.4

--- a/RELEASE-0.61.4
+++ b/RELEASE-0.61.4
@@ -1,5 +1,5 @@
 
-ikaaro 0.61.4 (2010/07/XX)
+ikaaro 0.61.4 (2010/07/17)
 ==========================
 
 This is a Content Management System built on Python & itools, among
