Get ready to release 0.62.1

--- a/RELEASE-0.62.1
+++ b/RELEASE-0.62.1
@@ -1,5 +1,5 @@
 
-ikaaro 0.62.1 (2010/08/XX)
+ikaaro 0.62.1 (2010/08/26)
 ==========================
 
 This is a Content Management System built on Python & itools, among
@@ -19,7 +19,8 @@ The "commit_log" and "changes" views have been much optimized, they
 run at least twice faster than before.  These views allow to see the
 contents of the database transactions (Git commits).
 
-Now the access log rotates automatically, once every three weeks.
+Now the access and event logs rotates automatically, once every three
+weeks.
 
 Several bugs have been fixed, including:
 
