Update release notes

--- a/RELEASE-0.62.3
+++ b/RELEASE-0.62.3
@@ -26,10 +26,13 @@ interface (see bug #920).
 Many other issues have been resolved, including:
 
  #0001 Make thumbnails of SVG files
+ #0898 Update French translation
  #0919 Reply doest not work on blogs comment
+ #0933 Call notify_subscriters only when the resource is changed
  #0988 Fix the 'Path' and 'Target' fields in the add-menu form
  #1018 Raise explicit errors on undefined properties
  #1019 icms-init: specify modules to import at creation
+ #1030 tracker: fix export-to-text
 
 
 Resources
