--- a/RELEASE-0.62.3
+++ b/RELEASE-0.62.3
@@ -27,7 +27,7 @@ Many other issues have been resolved, including:
 
     #1 Make thumbnails of SVG files
   #898 Update French translation
-  #919 Reply doest not work on blogs comment
+  #919 Reply does not work on blogs comment
   #933 Call notify_subscriters only when the resource is changed
   #988 Fix the 'Path' and 'Target' fields in the add-menu form
  #1018 Raise explicit errors on undefined properties
