Get ready to release 0.62.4

--- a/RELEASE-0.62.4
+++ b/RELEASE-0.62.4
@@ -1,4 +1,4 @@
-ikaaro 0.62.4 (2010/1X/XX)
+ikaaro 0.62.4 (2010/11/25)
 ==========================
 
 This is a Content Management System built on Python & itools, among
