Get ready to release 0.62.5

--- a/RELEASE-0.62.5
+++ b/RELEASE-0.62.5
@@ -1,4 +1,4 @@
-ikaaro 0.62.5 (2011/01/XX)
+ikaaro 0.62.5 (2011/01/10)
 ==========================
 
 This is a Content Management System built on Python & itools, among
@@ -28,7 +28,7 @@ The icms-update.py script has a new option, --mtime, it will set the
 mtime/last_author fields after inspection of the Git history.
 
 At the API level, the 'register_document_type' function has changed a
-litle, now the second parameter identifies the container class where
+little, now the second parameter identifies the container class where
 the given document type can be added, and not its parent class. See
 the upgrade notes for examples.
 
@@ -36,7 +36,7 @@ Other issues resolved include:
 
   #712 Tracker: add access control filter to the "Stored Searches" menu
  #1024 The documentation has been updated
- #1063 Fix the search-by-type select box in the popup
+ #1063 Fix the search-by-type select box in the pop-up
  #1087 Improve error message when trying to remove referenced resources
 
 
