Get ready to release 0.62.6

--- a/RELEASE-0.62.6
+++ b/RELEASE-0.62.6
@@ -1,4 +1,4 @@
-ikaaro 0.62.6 (2011/02/XX)
+ikaaro 0.62.6 (2011/02/17)
 ==========================
 
 This is a Content Management System built on Python & itools, among
@@ -28,12 +28,14 @@ that is installed, is now only visible to the site admins (bug #1104).
 
 Now site administrators can mass subscribe many users to an observable
 resource (like web page), even if the users are not in the database
-(bug #1165).
+(bug #1165). And non authenticated users can subscribe/unsubscribe
+themselves to public resources.
 
 The French translation has been updated.
 
 Other issues resolved include:
 
+  #994 When a user creates a web site make him admin
  #1150 Only admins can change the security policy
  #1164 cc: inherit the root admins when needed
  #1166 Fix renaming a resource if a parent folder has the same name
