Update release notes

--- a/RELEASE-0.62.7
+++ b/RELEASE-0.62.7
@@ -1,4 +1,4 @@
-ikaaro 0.62.7 (2011/04/XX)
+ikaaro 0.62.7 (2011/05/XX)
 ==========================
 
 This is a Content Management System built on Python & itools, among
@@ -25,10 +25,14 @@ User interface:
 - Send emails in the language of the destination user (#1199)
 - The "preview content" view now shows better looking thumbnails (#1099)
 - Improve the subscription form, scales better to many users (#1201)
+- Show a more readable page title (#785)
+- Update TinyMCE to 3.4.2
+- Fix signature when it already has '--' (#923)
 
 Performance improvements:
 - Optimize 'get_revisions' for the root resource
 - Use an sprite for the sort icons
+- Define maximum number of mails to send at once
 
 Access control
 - Now the user profile is not visible to anonymous users when the
