Get ready to release 0.62.7

--- a/RELEASE-0.62.7
+++ b/RELEASE-0.62.7
@@ -1,4 +1,4 @@
-ikaaro 0.62.7 (2011/05/XX)
+ikaaro 0.62.7 (2011/05/24)
 ==========================
 
 This is a Content Management System built on Python & itools, among
